--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ p {
     min-width: 270px;
     transition: all .4s ease-in-out;
     box-shadow: 5px 5px 3px 6px rgb(94, 12, 12);
+    cursor: pointer;
 }
 
 .card:hover {
@@ -109,26 +110,18 @@ p {
 
 .modal {
     display: none;
-    /* Hidden by default */
     position: fixed;
-    /* Stay in place */
     z-index: 1;
-    /* Sit on top */
     left: 0;
     top: 0;
     width: 100%;
-    /* Full width */
     height: 100%;
-    /* Full height */
     overflow: auto;
-    /* Enable scroll if needed */
     background-color: rgb(0, 0, 0);
-    /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
 }
 
-/* Modal Content/Box */
+/* Modal Content */
 
 .modal-content {
     background-color: #fefefe;
